--- a/Python-Notebook7-Tuples.ipynb
+++ b/Python-Notebook7-Tuples.ipynb
@@ -215,11 +215,198 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. Accessing Tuple elements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "can access tuple items by referring to the index number, inside square brackets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dublin\n"
+     ]
+    }
+   ],
+   "source": [
+    "mixtuple=(\"Dublin\", 1, True, 3.0)\n",
+    "print(mixtuple[0])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### Accessing with negative indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "mixtuple=(\"Dublin\", 1, True, 3.0)\n",
+    "print(mixtuple[-1]) #-1 refers to the last item, -2 refers to the second last item etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9. Checking if an item exits in a tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes, 'Dublin' is in the tuple\n"
+     ]
+    }
+   ],
+   "source": [
+    "mixtuple=(\"Dublin\", 1, True, 3.0)\n",
+    "if \"Dublin\" in mixtuple:\n",
+    "  print(\"Yes, 'Dublin' is in the tuple\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10. They are not changeable. Then what to do? Workaround: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Convert a tuple to a list and then change that list and again covert to a tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Cork', 1, True, 3.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "mixtuple=(\"Dublin\", 1, True, 3.0)\n",
+    "mixlist=list(mixtuple)\n",
+    "mixlist[0]=\"Cork\"\n",
+    "mixtuple=tuple(mixlist)\n",
+    "print(mixtuple)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11. Adding a tuple with a tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Dublin', 1, True, 3.0, 'Cork', 0, False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "Dubtuple=(\"Dublin\", 1, True, 3.0)\n",
+    "Cortuple=(\"Cork\", 0, False)\n",
+    "Dubtuple+=Cortuple\n",
+    "print(Dubtuple)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 12. Deleting tuples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Dublin', 1, True, 3.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "Dubtuple=(\"Dublin\", 1, True, 3.0)\n",
+    "print(Dubtuple)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Dubtuple' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-21-ced954ac22ad>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdel\u001b[0m \u001b[0mDubtuple\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mDubtuple\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# Will generate an error as it has been deleted already\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'Dubtuple' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "del Dubtuple\n",
+    "print(Dubtuple) # Will generate an error as it has been deleted already"
+   ]
   }
  ],
  "metadata": {
