--- a/Python-Notebook13-Classes.ipynb
+++ b/Python-Notebook13-Classes.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ec60005f",
    "metadata": {},
    "source": [
     "# Classes in Python"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d3adcf7",
    "metadata": {},
    "source": [
     "Python is an object oriented language."
@@ -18,7 +16,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ad9c315",
    "metadata": {},
    "source": [
     "## 1. Creating a class using keyword <font color=red>class </font>"
@@ -27,7 +24,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ed7986b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +33,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd2a22d5",
    "metadata": {},
    "source": [
     "### 1.1 Creating an object of the class"
@@ -46,7 +41,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2d2f7396",
    "metadata": {},
    "outputs": [
     {
@@ -64,15 +58,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b82b434",
    "metadata": {},
    "source": [
-    "## 2. The functionality of <font color=red>__init__() </font> function"
+    "## 2. The functionality of Constructor <font color=red>\\_\\_init\\_\\_() </font> function"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "75744e31",
    "metadata": {},
    "source": [
     "#### All classes have a function called <font color=red>__init__() </font> , which is always executed when the class is being initiated."
@@ -80,8 +72,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "3e02ae66",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Electronic:\n",
+    "  def __init__(self, nameofM, yearofM):\n",
+    "    self.Manufacturer = nameofM\n",
+    "    self.yearofManufacture = yearofM\n",
+    "\n",
+    "p1 = Electronic(\"Sony\", 2003)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Methods of Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Manufacturer is Sony  and year of manufacturing is  2003\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Electronic:\n",
+    "    def __init__(self, nameofM, yearofM):\n",
+    "        self.Manufacturer = nameofM\n",
+    "        self.yearofManufacture = yearofM\n",
+    "    def printfunc(self):\n",
+    "        print(\"Manufacturer is \"+ self.Manufacturer, \" and year of manufacturing is \", self.yearofManufacture )\n",
+    "\n",
+    "p1 = Electronic(\"Sony\", 2003)\n",
+    "p1.printfunc()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Empty Class:<font color=Fuchsia> generates an error </font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-1-361e5cce09c4>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-361e5cce09c4>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    class Eletronic:\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Electronic:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=Green> Solution :  </font>Insert a <font color=red> pass </font> statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Electronic:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Accessing class attributes from outside of the class methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,12 +180,12 @@
     }
    ],
    "source": [
-    "class Eletronic:\n",
+    "class Electronic:\n",
     "  def __init__(self, nameofM, yearofM):\n",
     "    self.Manufacturer = nameofM\n",
     "    self.yearofManufacture = yearofM\n",
     "\n",
-    "p1 = Eletronic(\"Sony\", 2003)\n",
+    "p1 = Electronic(\"Sony\", 2003)\n",
     "\n",
     "print(p1.Manufacturer)\n",
     "print(p1.yearofManufacture)"
@@ -107,88 +193,42 @@
   },
   {
    "cell_type": "markdown",
-   "id": "672b34a8",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 6. Desctructor or deleting a class object using  descructor <font color=red>\\_\\_del\\_\\_() </font> and <font color=red>del </font>"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "ec850185",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Manufacturer is Sony  and year of manufacturing is  2003\n"
+      "Creating object of the class Electronic\n",
+      "Deleting object of the class Electronic\n"
      ]
     }
    ],
    "source": [
-    "class Eletronic:\n",
+    "class Electronic:\n",
     "    def __init__(self, nameofM, yearofM):\n",
+    "        print(\"Creating object of the class Electronic\")\n",
     "        self.Manufacturer = nameofM\n",
     "        self.yearofManufacture = yearofM\n",
-    "    def printfunc(self):\n",
-    "        print(\"Manufacturer is \"+ self.Manufacturer, \" and year of manufacturing is \", self.yearofManufacture )\n",
+    "    def __del__(self):\n",
+    "        print(\"Deleting object of the class Electronic\")\n",
     "\n",
-    "p1 = Eletronic(\"Sony\", 2003)\n",
-    "p1.printfunc()"
+    "p1 = Electronic(\"Sony\", 2003)\n",
+    "del p1"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "96b81e07",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "32ee5abf",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "79fc0884",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d3f440e9",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b54d7ac4",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "01cc0f8d",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3d360a0d",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5a560419",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -202,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
