--- a/Python-Notebook14-Inheritance.ipynb
+++ b/Python-Notebook14-Inheritance.ipynb
@@ -231,6 +231,65 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iphone14ProMax 11111111\n",
+      "Galaxy23Ultra 22222222\n",
+      "Taimur\n"
+     ]
+    }
+   ],
+   "source": [
+    "#-----------------------------------------\n",
+    "#------Parent First Class-----------------\n",
+    "class AppleProduct():\n",
+    "   \n",
+    "  # Constructor\n",
+    "  def __init__(self, Aname, AserialNumber):\n",
+    "    self.name = Aname\n",
+    "    self.serialNumber = AserialNumber\n",
+    " \n",
+    "  # Method to show details\n",
+    "  def DisplayBasicInfoApple(self):\n",
+    "    print(self.name, self.serialNumber)\n",
+    "#---------------------------------------\n",
+    "#------Parent 2nd class-----------------\n",
+    "class SamsungProduct():\n",
+    "   \n",
+    "  # Constructor\n",
+    "  def __init__(self, Sname, SserialNumber):\n",
+    "    self.Sname = Sname\n",
+    "    self.SserialNumber = SserialNumber\n",
+    " \n",
+    "  # Method to show details\n",
+    "  def DisplayBasicInfoSamsung(self):\n",
+    "    print(self.Sname, self.SserialNumber)\n",
+    "#---------------------------------------\n",
+    "#--Driving a New class from two above---\n",
+    "class Gift(AppleProduct,SamsungProduct):\n",
+    "  def __init__(self, Aname, AserialNumber,Sname, SserialNumber,receiver):\n",
+    "    AppleProduct.__init__(self,Aname, AserialNumber)\n",
+    "    SamsungProduct.__init__(self,Sname, SserialNumber)\n",
+    "    self.receiverofGift=receiver\n",
+    "  def DisplayGiftInfo(self):\n",
+    "    self.DisplayBasicInfoApple()\n",
+    "    self.DisplayBasicInfoSamsung()\n",
+    "    print(self.receiverofGift)\n",
+    "giftobj=Gift(\"Iphone14ProMax\",\"11111111\",\"Galaxy23Ultra\",\"22222222\",\"Taimur\")\n",
+    "giftobj.DisplayGiftInfo()\n",
+    "            \n",
+    "            \n",
+    "\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -238,7 +297,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -252,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
