--- a/Python-Notebook17-ExceptionHandling.ipynb
+++ b/Python-Notebook17-ExceptionHandling.ipynb
@@ -43,6 +43,7 @@
     "\n",
     "<!-- <table style=\"width:200% margin-left:10px\"> -->\n",
     "<table style=\"width:100%\">\n",
+    "  <caption> Some exceptions in Python</caption>\n",
     "  <tr>\n",
     "    <th><font  color=Black size=4px style=\"background-color: Plum\"># </font></th>\n",
     "      <th> <font  color=red size=4px style=\"background-color: Pink\">Actual Error⚠️ </font></th>\n",
