--- a/Python-Notebook18-TryExcept.ipynb
+++ b/Python-Notebook18-TryExcept.ipynb
@@ -128,6 +128,16 @@
    "cell_type": "markdown",
    "id": "0c573a02",
    "metadata": {},
+   "source": [
+    "### 2.1 Example: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de21085e",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
