--- a/Python-Notebook18-TryExcept.ipynb
+++ b/Python-Notebook18-TryExcept.ipynb
@@ -13,7 +13,7 @@
    "id": "b04d99c6",
    "metadata": {},
    "source": [
-    "## 1. Format: Try and Except"
+    "## 1. Format:  <font color=red> try</font>  and <font color=red> except</font>"
    ]
   },
   {
@@ -105,7 +105,7 @@
    "id": "6089df76",
    "metadata": {},
    "source": [
-    "## 2. Format: Try , Else and Except"
+    "## 2. Format:  <font color=red> try</font> , <font color=red> except</font>  and <font color=red> else</font>"
    ]
   },
   {
@@ -134,41 +134,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "de21085e",
+   "execution_count": 2,
+   "id": "7c0b0292",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=10\n",
+    "y=20\n",
+    "try:\n",
+    "    result = (x / y)\n",
+    "except ZeroDivisionError:\n",
+    "    print (\"a/b result in 0\")\n",
+    "else:\n",
+    "        print (result)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "1cb008cd",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Else runs only if try runs successfully. "
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "4efc124e",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 3. Format:  <font color=red> try</font> , <font color=red> except</font> , <font color=red> else</font> and <font color=red> finally</font>"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "abab39f3",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### anything in finally is excuted no matter if try is successful or exceptions was caused"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "340d1e09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    # Some Code\n",
+    "except:\n",
+    "    # Executed if error in the\n",
+    "    # try block\n",
+    "else:\n",
+    "    # execute if no exception\n",
+    "finally:\n",
+    "    # excute always"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "5b529878",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 3.1 Example: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3789d2a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n",
+      "Finally ending program\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=10\n",
+    "y=20\n",
+    "try:\n",
+    "    result = (x / y)\n",
+    "except ZeroDivisionError:\n",
+    "    print (\"a/b result in 0\")\n",
+    "else:\n",
+    "        print (result)\n",
+    "finally:\n",
+    "    print(\"Finally ending program\")"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "d9b2e53f",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 3.2 Example: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d834bbf0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a/b result in 0\n",
+      "Finally ending program\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=10\n",
+    "y=0\n",
+    "try:\n",
+    "    result = (x / y)\n",
+    "except ZeroDivisionError:\n",
+    "    print (\"a/b result in 0\")\n",
+    "else:\n",
+    "        print (result)\n",
+    "finally:\n",
+    "    print(\"Finally ending program\")"
+   ]
   },
   {
    "cell_type": "markdown",
