--- a/Python-Notebook20-Decorators.ipynb
+++ b/Python-Notebook20-Decorators.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Simple Example:"
+    "### 1. Simple Example:"
    ]
   },
   {
@@ -80,12 +80,38 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 2. Accepting Arguments in Decorator Functions"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passed Arguments are: Dublin Galway Cork\n",
+      "Cities I visited are Dublin Galway and Cork\n"
+     ]
+    }
+   ],
+   "source": [
+    "def decorator_with_arguments(function):\n",
+    "    def wrapper_accepting_arguments(arg1, arg2, arg3):\n",
+    "        print(\"Passed Arguments are: {0} {1} {2}\".format(arg1,arg2,arg3))\n",
+    "        function(arg1, arg2,arg3)\n",
+    "    return wrapper_accepting_arguments\n",
+    "\n",
+    "\n",
+    "@decorator_with_arguments\n",
+    "def cities(city_one, city_two, city_three):\n",
+    "    print(\"Cities I visited are {0} {1} and {2}\".format(city_one, city_two, city_three))\n",
+    "\n",
+    "cities(\"Dublin\", \"Galway\", \"Cork\")"
+   ]
   },
   {
    "cell_type": "markdown",
